@@ -7,6 +7,13 @@ Sources
 
 Releases
 {
+  v8r8p4
+  {
+    Modules = LHCbDIRAC:v8r8p4, LHCbWebDIRAC:v4r3p3
+    Depends = DIRAC:v6r17p23
+    LcgVer = 2017-05-23
+  }
+
   v8r8p3
   {
     Modules = LHCbDIRAC:v8r8p3, LHCbWebDIRAC:v4r3p3
