@@ -1,3 +1,9 @@
+[v8r8p4]
+use DIRAC v6r17p23
+
+* substitute != with is not
+* Fix different bugs in EverythingElse template
+
 [v8r8p3]
 use DIRAC v6r17p23
 
